5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1706_3054.log
== TEST (2019-04-29 19:21:31) 
-- CODE:
x = float(input("carga horaria:"))
y = float(input("valor:"))
z = float(input("bonificacao"))
if(25>=0)

-- ERROR:
File "XXXX", line 4
    if(25>=0)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:26:35) 
-- CODE:
x = float(input("carga horaria:"))
y = float(input("valor:"))
z = float(input("bonificacao"))
p = float(input("pagamento"))
if(p >= 0):

-- ERROR:
File "XXXX", line 6
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:26:46) 
-- CODE:
x = float(input("carga horaria:"))
y = float(input("valor:"))
z = float(input("bonificacao"))
p = float(input("pagamento"))
if(25 >= 0):

-- ERROR:
File "XXXX", line 6
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:27:28) 
-- CODE:
x = float(input("carga horaria:"))
y = float(input("valor:"))
z = float(input("bonificacao"))
p = float(input("pagamento"))
if(p >= 0):

-- ERROR:
File "XXXX", line 6
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 19:27:41) 
-- CODE:
x = float(input("carga horaria:"))
y = float(input("valor:"))
z = float(input("bonificacao"))
p = float(input("pagamento"))
if(x >= 0):

-- ERROR:
File "XXXX", line 6
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
